--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   <div class="relative h-[79.3vh]">
     <img class="absolute top-[-32px] z-[-1]" src="./image/sunbelievably good 1920x715 (1).jpg" alt="">
-    <div class="w-full h-[130px] bg-[url('/image/wave.png')] absolute top-[437px] bg-repeat bg-top">
+    <div class="w-full h-[130px] bg-[url('./image/wave.png')] absolute top-[437px] bg-repeat bg-top">
         </div>
     <div>
       <img class="absolute top-[318px] h-[224px] w-[230px] left-[-73px]" src="./image/chip3.png" alt="">
